# aura

./: .gitignore  .oxlintrc.json  .prettierignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  cliff.toml  index.html  lint-staged.config.mjs  markdown-page.html  package.json  playground.html  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  release-please-config.json  release-plz.toml  sitemap.xml
.agents/rules/: language-design.md  plan-execution.md  project-structure.md
.github/workflows/: ci.yml  deploy-site.yml  deploy-website.yml  publish-wasm.yml  release-binaries.yml  release-please.yml  release-plz.yml  release.yml
agents/: debts.md
assets/js/: 13b1e09b.6b7ececa.js  18386582.69bca6f7.js  2727a981.0262f39a.js  2c2382bb.34f79381.js  393be207.83fa3bce.js  42533d75.0ef884f4.js  45ec660b.8b29e2e6.js  50b597db.06c32de2.js  54d78223.19a62b94.js  5cc5fa86.a7fdd73f.js  5df0a02d.669f5371.js  63fbfde5.b1ec7745.js  71bcc48f.4857f12b.js  7bcf7d2d.41571ed2.js  7f00a3aa.fe549e24.js  831caa9d.b1c4242c.js  8de346d4.bcfaaca2.js  8e4b11f3.54adb134.js  96035226.22eac05e.js  9b9d04b8.de171c14.js  9c1375d3.f8f37f2d.js  a09c2993.2c263ee2.js  a381ea0f.791e6b22.js  aba32af7.6db2ebed.js  b7f604ec.e3b36677.js  c40f96dd.6e7c0aba.js  c8245f4f.4e675e20.js  cf039ed3.d8994c14.js  d80b4619.dc9a9974.js  e1eab238.e65e804b.js  e90e0578.efa4a927.js  f385f8e0.ff033ee3.js  f786841e.1d668c56.js  fb6ebc1d.3047c4fd.js  main.94a90208.js  runtime~main.faa5a9fe.js
corpus/: README.md
corpus/alpha/: README.md  ffi_declaration.aura
corpus/async/: multi_await_four.aura  no_await.aura  task_lifecycle.aura  typed_channels.aura
corpus/class/: alias_ref.aura  counter.aura  gc_array.aura  gc_array_field.aura  gc_deep.aura  gc_nested_churn.aura  gc_roots.aura  greeter.aura  identity.aura  nullable.aura  safe_call.aura
corpus/control/: break_continue.aura  class_throw.aura  (+10 more)
crates/: README.md
crates/aura-codegen/: CHANGELOG.md  Cargo.toml
crates/aura-codegen-llvm/: CHANGELOG.md  Cargo.toml
crates/aura-codegen-llvm/src/: lib.rs
crates/aura-codegen/fixtures/: ffi_primitives.c
crates/aura-codegen/src/: array_emit.rs  build.rs  cache.rs  call_emit.rs  class_emit.rs  ctx.rs  driver.rs  emit.rs  enum_emit.rs  error.rs  expr.rs  iface.rs  lib.rs  names.rs  options.rs  runtime_abi.rs  stmt.rs  validation.rs
crates/aura-driver/: CHANGELOG.md  Cargo.toml
crates/aura-driver/src/: dump_hir.rs  lib.rs  modules.rs  resolve.rs
crates/aurac/: CHANGELOG.md  Cargo.toml
crates/aurac/src/: main.rs
crates/aurac/tests/: e2e.rs  e2e_debug.rs  e2e_exceptions.rs  e2e_hello.rs  e2e_oop.rs
docs/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  PLAN.md  README.md  SYNTAX_DESIGN.md  advanced-concepts.html  faq-and-troubleshooting.html  internals-and-architecture.html  introduction.html  json.md  oop.md  overview.md  roadmap.md  syntax.md  tooling-and-cli.html  union-types.md
examples/: complex_hir.aura
plans/: plan_1_vertical_slice.md  plan_2_typesafe_core.md  plan_3_dx_tooling.md  plan_4_systems_runtime.md  plan_5_parallel_contract.md  roadmaps.md
runtime/: aura_ffi.h  aura_rt.c
scripts/: alpha-harness.sh  async-io-ffi-smoke.sh  audit-alpha-completion.sh  avm  check-corpus.sh  compiler-regression.sh  cross-host-acceptance.sh  ffi-regression.sh  generate-release-manifest.sh  http-aura-smoke.sh  http-health-smoke.sh  install-smoke.sh  install.sh  package-release.sh  prepare-release.sh  quick-release.sh  race-regression.sh  registry-release-acceptance.sh  release-acceptance.sh  release-dry-run.sh  release-signing.md  release-targets.tsv  release.sh  sanitizer-smoke.sh  uninstall.sh  validate-alpha-contract.sh  validate-corpus-split.sh  validate-cross-target-packaging.sh  validate-registry-acceptance.sh  validate-release-bundle.sh  validate-release-policy.sh  validate-sanitizer-seeds.sh
site/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/: lib.rs  main.rs
tests/: async_test.aura  class_test.aura  e2e.rs  error_recovery.aura  error_test.aura  fib.aura  fib_small.aura  interp_test.aura  invalid_block.aura  ir_test.aura  module_test.aura  narrowing.aura  narrowing_else.aura  narrowing_else_fail.aura  narrowing_fail.aura  opt_test.aura  stdlib_test.aura  structural_test.aura  type_safe_test.aura
todos/: plan2_phase1.md  plan2_phase2.md  plan2_phase3.md  plan2_phase4.md  plan3_phase1.md  plan3_phase3.md  plan3_phase4.md  plan4_phase2.md  plan4_phase3.md  plan4_phase5.md  plan5_phase1_3.md  plan5_phase5.md  todo_phase1.md  todo_phase2.md  todo_phase3.md  todo_phase4.md  todo_phase5.md
website/: docusaurus.config.js  docusaurus.config.ts  package.json
(+785 files in other folders)
