[workspace]
resolver = "2"
members = [
  "crates/aura-ast",
  "crates/aura-diagnostics",
  "crates/aura-driver",
  "crates/aura-lexer",
  "crates/aura-parser",
  "crates/aura-span",
  "crates/aura-typeck",
  "crates/aura-mir",
  "crates/aurac",
  "crates/aura-codegen",
  "crates/aura-codegen-clif",
  "crates/aura-codegen-llvm",
  "crates/aura-link",
  "runtime/aura-rt",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
