[workspace]
resolver = "2"
members = [
    "crates/aura-ast",
    "crates/aura-lexer",
    "crates/aura-parser",
    "crates/aura-cli",
]
default-members = ["crates/aura-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/auraspace/aura"
rust-version = "1.80"

[workspace.dependencies]
aura-ast = { path = "crates/aura-ast" }
aura-lexer = { path = "crates/aura-lexer" }
aura-parser = { path = "crates/aura-parser" }
