[package]
name = "aura-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aura C backend codegen for C1 hello binaries"

[dependencies]
aura-ast.workspace = true
aura-sema.workspace = true
sha2 = "0.10"

[dev-dependencies]
aura-parser.workspace = true
