[package]
name = "aurac"
version.workspace = true
edition.workspace = true

[dependencies]
aura-diagnostics = { path = "../aura-diagnostics" }
aura-driver = { path = "../aura-driver" }
aura-codegen = { path = "../aura-codegen" }
aura-codegen-clif = { path = "../aura-codegen-clif" }
aura-codegen-llvm = { path = "../aura-codegen-llvm" }
aura-link = { path = "../aura-link" }
inkwell = { version = "0.5", features = ["llvm15-0"] }
anyhow = "1.0"
aura-mir = { path = "../aura-mir" }
aura-typeck = { path = "../aura-typeck" }

[dev-dependencies]
aura-test-harness = { path = "../aura-test-harness" }
